// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ivPUJz"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC jlEtSo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC zIeJP"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaOGTt khIAMB"
      >
        <button
          className="sc-kSzVC cGmvXJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jNxMLV lesvys"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE geuoxP"
      size="small"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kWlBNN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kqjQey"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaOGTt khIAMB"
      >
        <button
          className="sc-kSzVC cIpHYY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jNxMLV lesvys"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC jlEtSo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC jlEtSo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC zIeJP"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC jlEtSo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC zIeJP"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaOGTt khIAMB"
      >
        <button
          className="sc-kSzVC cGmvXJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jNxMLV lesvys"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC jlEtSo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaOGTt khIAMB"
      >
        <button
          className="sc-kSzVC cGmvXJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jNxMLV lesvys"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC zIeJP"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC zIeJP"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaOGTt khIAMB"
      >
        <button
          className="sc-kSzVC cGmvXJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jNxMLV lesvys"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kWlBNN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kWlBNN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kqjQey"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kWlBNN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kqjQey"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaOGTt khIAMB"
      >
        <button
          className="sc-kSzVC cIpHYY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jNxMLV lesvys"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kWlBNN"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaOGTt khIAMB"
      >
        <button
          className="sc-kSzVC cIpHYY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jNxMLV lesvys"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kqjQey"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eirfIE ilUigR"
    >
      <div
        className="sc-hfufsb dKhJMC"
      >
        <div
          className="sc-iaOGTt khIAMB"
        >
          <button
            className="sc-kSzVC kqjQey"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNxMLV lesvys"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaOGTt khIAMB"
      >
        <button
          className="sc-kSzVC cIpHYY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jNxMLV lesvys"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
